commit tree 2011cc0192e4a550d24fc62f7d8ce8e37d41fe29

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     <div id="dog-image-container">
       <!-- images here -->
+      <script fetch(const imgUrl = "https://dog.ceo/api/breeds/image/random/4")
+      .then(response => response.json())
+      .then(data => console.log(data))></script>
     </div>
 
     <hr>
